--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
   
 <!-- Image Header -->
 <div class="imgg ">
-    <img src="Sponsoroid.png" class="photo" alt="boat">
+    <img src="images/Sponsoroid.png" class="photo" alt="boat">
     <div class="learn-more ">  
         <button onclick="document.getElementById('id01').style.display='block'" class="lm-btn ci c-hover-teal" title="">LEARN MORE</button>
       </div>
